test/conformance/kuttl/validate/policy/standard/psa/test-exclusion-restricted-capabilities/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-exclusion-restricted-capabilities
spec:
  background: true
  validationFailureAction: Enforce
  rules:
  - name: test-exclusion-restricted-capabilities
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      podSecurity:
        level: restricted
        version: latest
        exclude:
        - controlName: "Capabilities"
          images:
          - nginx
          restrictedField: "spec.containers[*].securityContext.capabilities.add"
          values:
          - "foo"
        - controlName: "Capabilities"
          images:
          - nginx
          restrictedField: "spec.initContainers[*].securityContext.capabilities.add"
          values:
          - "baz"
        - controlName: "Capabilities"
          images:
          - nginx
          restrictedField: "spec.ephemeralContainers[*].securityContext.capabilities.add"
          values:
          - "foo"
          - "baz"
